gcc/testsuite/gfortran.dg/pr88116_1.f90
! { dg-do compile }
program p
   print *, [integer :: 1, [integer(8) :: 2, ['3']]] ! { dg-error "Cannot convert" }
end
